added js functionality

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="question-box">
             <div class="question-accordion">
               <h3 class="question">How many team members can I invite?</h3>
-              <img src="./images/icon-arrow-down.svg" />
+              <img class="accordion-open" src="./images/icon-arrow-down.svg" />
             </div>
             <p class="answer answer-hidden" data-answer="1" id="1">
               You can invite up to 2 additional users on the Free plan. There is
